create lesson 6
