# swagger-output.json
@@ -28,10 +28,14 @@
         "summary":"get all users",
         "description": "This is for when admin wants to look all infomation about users",
         "parameters": [],
-        "responses": {}
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
       },
       "post": {
-        "tags":["create user"],
+        "tags":["change user db"],
         "summary":"create new user",
         "description": "This is for when user create an account",
         "parameters": [
@@ -74,7 +78,11 @@
             }
           }
         ],
-        "responses": {}
+        "responses": {
+          "201": {
+            "description": "Created"
+          }
+        }
       }
     },
     "/user/{id}": {
@@ -89,7 +97,84 @@
             "type": "string"
           }
         ],
-        "responses": {}
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      },
+      "put": {
+        "tags":["change user db"],
+        "summary":"edit user information",
+        "description": "This is for when user wants to update information",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },{
+            "name": "contact",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "firstName": {
+                  "example": "Sarah"
+                },
+                "lastName": {
+                  "example": "Carter"
+                },
+                "userName": {
+                  "example": "sarcar"
+                },
+                "password": {
+                  "example": "zxcvb"
+                },
+                "email": {
+                  "example": "sarcar@example.com"
+                },
+                "phoneNumber": {
+                  "example": "444-444-444"
+                },
+                "country": {
+                  "example": "USA"
+                },
+                "goals":{
+                  "example": [{
+                    "goalName":"go to the mission",
+                    "startDate":"08-01-2023",
+                    "endDate":"02-01-2025",
+                    "plan":"prepare my documents"
+                  }] 
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "No Content"
+          }
+        }
+      },
+      "delete": {
+        "tags":["change user db"],
+        "summary":"delete user information",
+        "description": "This is for when admin or user wants to information",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
       }
     }
   }
